--- a/tracking-code-for-website.html
+++ b/tracking-code-for-website.html
@@ -1,4 +1,4 @@
-<!-- Add this right before the closing </body> tag -->
+<!-- Add this code right before closing </body> tag in your website -->
 <script>
   // Get the business ID from URL parameters
   const urlParams = new URLSearchParams(window.location.search);
@@ -82,6 +82,7 @@
 
     // Send analytics data
     async function sendAnalytics() {
+      // Replace PIPELINE_URL with your actual pipeline app URL
       const PIPELINE_URL = 'https://bbd5027a-f3b6-48cb-b2e3-7c31fdf9c394-00-1a4b9g7vepksy.janeway.replit.dev';
 
       try {
@@ -96,7 +97,7 @@
             duration: Math.round((Date.now() - SESSION.startTime) / 1000),
             source: document.referrer || 'direct'
           }),
-          mode: 'cors'
+          mode: 'cors' // Enable CORS for cross-origin requests
         });
 
         // Send detailed analytics data
@@ -107,7 +108,7 @@
             'Accept': 'application/json'
           },
           body: JSON.stringify(SESSION),
-          mode: 'cors'
+          mode: 'cors' // Enable CORS for cross-origin requests
         });
       } catch (e) {
         console.error('Failed to send analytics:', e);
