--- a/website-tracking-code-final.html
+++ b/website-tracking-code-final.html
@@ -1,4 +1,9 @@
-<!-- Add this right before the closing </body> tag -->
+<!-- Here's how to use this tracking code:
+1. Copy this entire script
+2. Paste it right before the closing </body> tag in your website
+3. Add ?site_id=YOUR_BUSINESS_ID to your website URLs
+   Example: yourwebsite.com/page?site_id=1stcallplumbing
+-->
 <script>
   // Get the business ID from URL parameters
   const urlParams = new URLSearchParams(window.location.search);
@@ -82,6 +87,7 @@
 
     // Send analytics data
     async function sendAnalytics() {
+      // Replace with your pipeline application URL
       const PIPELINE_URL = 'https://bbd5027a-f3b6-48cb-b2e3-7c31fdf9c394-00-1a4b9g7vepksy.janeway.replit.dev';
 
       try {
@@ -96,7 +102,7 @@
             duration: Math.round((Date.now() - SESSION.startTime) / 1000),
             source: document.referrer || 'direct'
           }),
-          mode: 'cors'
+          mode: 'cors' // Enable CORS for cross-origin requests
         });
 
         // Send detailed analytics data
@@ -107,7 +113,7 @@
             'Accept': 'application/json'
           },
           body: JSON.stringify(SESSION),
-          mode: 'cors'
+          mode: 'cors' // Enable CORS for cross-origin requests
         });
       } catch (e) {
         console.error('Failed to send analytics:', e);
