Agent query: I've created the tracking code but haven't shown it to you clearly. Would you like me to show you the exact code snippet you need to add to your website right now? It will track page views, clicks, and send data to our pipeline application.
Add comprehensive website tracking and analytics:  Enhanced tracking code to capture page views, clicks, and session data, sending it to the backend every 30 seconds for processing.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/bbd5027a-f3b6-48cb-b2e3-7c31fdf9c394/361fe885-18e1-43a0-a757-9bf599ea3bfd.jpg

--- a/final-tracking-code.html
+++ b/final-tracking-code.html
@@ -1,4 +1,4 @@
-<!-- Add this right before closing </body> tag in your website -->
+<!-- Add this right before the closing </body> tag of your website -->
 <script>
   // Get the business ID from URL parameters
   const urlParams = new URLSearchParams(window.location.search);
@@ -117,7 +117,7 @@
     // Start tracking
     recordPageView();
 
-    // Send analytics every 30 seconds
+    // Send analytics periodically to avoid data loss
     setInterval(sendAnalytics, 30000);
   }
 </script>
