Assistant checkpoint: Create tracking code template
Assistant generated file changes:
- tracking-code-simple.html: Create simple tracking code

---

User prompt:

how do i get this Site ID
Start time
Device info (browser, OS, screen size)
Page views
Click events
Navigation path to come in with thi sDuration: 6s (when leaving the page)
Source: direct
Pipeline stage remained at "website_viewed" is error on this applcaiton or other wbesite

--- a/tracking-code-simple.html
+++ b/tracking-code-simple.html
@@ -6,55 +6,46 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-
     <script>
     const API_URL = 'https://e1ad1fcb-e0d6-4975-9d66-21666cc89433-00-edqcrzbbmbuj.riker.replit.dev';
-    const urlParams = new URLSearchParams(window.location.search);
-    const siteId = urlParams.get('site_id');
+    const siteId = 'YOUR_SITE_ID'; // Replace with your site ID
 
-    if (siteId) {
-      const SESSION = {
-        siteId: siteId,
-        startTime: Date.now(),
-        pageViews: [{
-          path: window.location.pathname + window.location.search,
-          timestamp: Date.now(),
-          deviceInfo: {
-            browser: navigator.userAgent,
-            os: navigator.platform,
-            screenSize: { width: window.screen.width, height: window.screen.height }
-          }
-        }]
+    const SESSION = {
+      siteId: siteId,
+      startTime: Date.now(),
+      deviceInfo: {
+        browser: navigator.userAgent,
+        os: navigator.platform,
+        screenSize: { width: window.screen.width, height: window.screen.height }
+      },
+      pageViews: [],
+      clicks: [],
+      navigationPath: []
+    };
+
+    // Record initial visit
+    fetch(`${API_URL}/api/businesses/${siteId}/visits`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        duration: 0,
+        source: document.referrer || 'direct'
+      })
+    });
+
+    // Send data when user leaves
+    window.addEventListener('beforeunload', () => {
+      const visitData = {
+        duration: Math.round((Date.now() - SESSION.startTime) / 1000),
+        source: document.referrer || 'direct'
       };
 
-      // Record initial visit
-      fetch(`${API_URL}/api/businesses/${siteId}/visits`, {
-        method: 'POST',
-        headers: { 
-          'Content-Type': 'application/json',
-          'Origin': window.location.origin
-        },
-        mode: 'cors',
-        body: JSON.stringify({
-          duration: 0,
-          source: document.referrer || 'direct'
-        })
-      }).catch(e => console.warn('Initial visit recording failed:', e));
+      navigator.sendBeacon(`${API_URL}/api/businesses/${siteId}/visits`, 
+        new Blob([JSON.stringify(visitData)], { type: 'application/json' }));
 
-      // Send data when user leaves using sendBeacon
-      window.addEventListener('beforeunload', () => {
-        const visitData = new Blob([JSON.stringify({
-          duration: Math.round((Date.now() - SESSION.startTime) / 1000),
-          source: document.referrer || 'direct'
-        })], { type: 'application/json' });
-
-        const analyticsData = new Blob([JSON.stringify(SESSION)], { type: 'application/json' });
-
-        navigator.sendBeacon(`${API_URL}/api/businesses/${siteId}/visits`, visitData);
-        navigator.sendBeacon(`${API_URL}/api/businesses/${siteId}/analytics`, analyticsData);
-      });
-    }
-  </script>
+      navigator.sendBeacon(`${API_URL}/api/businesses/${siteId}/analytics`,
+        new Blob([JSON.stringify(SESSION)], { type: 'application/json' }));
+    });
+    </script>
   </body>
 </html>
